--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(sdl2048)
 
 set(CMAKE_C_STANDARD 11)
 
-#add_compile_options("-O3")
-#add_link_options("-s")
+add_compile_options("-O3")
+add_link_options("-s")
 
 file(GLOB sources CONFIGURE_DEPENDS "src/*.c" "src/*.h")
 add_executable(sdl2048 ${sources})
@@ -13,7 +13,3 @@ add_executable(sdl2048 ${sources})
 include_directories(libs/sdl/include)
 file(GLOB sdl_binaries CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/libs/sdl/bin/*")
 target_link_libraries(${PROJECT_NAME} ${sdl_binaries})
-
-#find_package(SDL2 REQUIRED)
-#include_directories(${PROJECT_NAME} ${SDL2_INCLUDE_DIRS})
-#target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
