--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(sdl2048 LANGUAGES C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_compile_options("-O3")
-add_link_options("-s")
+#add_compile_options("-O3")
+#add_link_options("-s")
 
 file(GLOB sources CONFIGURE_DEPENDS "src/*.c" "src/*.h")
 add_executable(sdl2048 ${sources})
